// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAuthEmail > renders the branded recovery mail (snapshot) 1`] = `
"
<!DOCTYPE html>
<html lang="nb">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Tilbakestill passordet ditt</title>
</head>
<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f5f5f5;">
  <div style="max-width: 520px; margin: 0 auto; padding: 40px 20px;">
    <div style="background: #ffffff; border-radius: 12px; padding: 40px 32px; border: 1px solid #e5e5e5;">
      <!-- Header -->
      <div style="margin-bottom: 28px;">
        <p style="margin: 0 0 4px 0; font-size: 13px; color: #888; letter-spacing: 0.05em;">SIFFRA</p>
        <h1 style="margin: 0 0 8px 0; font-size: 22px; font-weight: 600; color: #111;">
          Tilbakestill passordet ditt
        </h1>
        <p style="margin: 0; color: #666; font-size: 15px;">
          Vi har mottatt en forespørsel om å tilbakestille passordet til kontoen din hos Siffra. Klikk på knappen nedenfor for å velge et nytt passord.
        </p>
      </div>

      <div style="margin: 28px 0;">
        <a href="https://app.siffra.se/auth/callback?token_hash=abc&amp;type=recovery" style="display: inline-block; background: #111; color: #fff; text-decoration: none; padding: 12px 28px; border-radius: 8px; font-size: 14px; font-weight: 500;">
          Tilbakestill passordet
        </a>
      </div>
      <!-- Info -->
      <p style="margin: 0; color: #999; font-size: 13px;">
        Hvis du ikke ba om dette, kan du se bort fra denne meldingen.
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`buildAuthEmail > renders the branded recovery mail (snapshot) 2`] = `
"Tilbakestill passordet ditt

Vi har mottatt en forespørsel om å tilbakestille passordet til kontoen din hos Siffra. Klikk på knappen nedenfor for å velge et nytt passord.

Tilbakestill passordet: https://app.siffra.se/auth/callback?token_hash=abc&type=recovery

Hvis du ikke ba om dette, kan du se bort fra denne meldingen."
`;

exports[`buildAuthEmail > renders the platform default without a brand 1`] = `
"
<!DOCTYPE html>
<html lang="nb">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Tilbakestill passordet ditt</title>
</head>
<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f5f5f5;">
  <div style="max-width: 520px; margin: 0 auto; padding: 40px 20px;">
    <div style="background: #ffffff; border-radius: 12px; padding: 40px 32px; border: 1px solid #e5e5e5;">
      <!-- Header -->
      <div style="margin-bottom: 28px;">
        <p style="margin: 0 0 4px 0; font-size: 13px; color: #888; letter-spacing: 0.05em;">ACCOUNTED</p>
        <h1 style="margin: 0 0 8px 0; font-size: 22px; font-weight: 600; color: #111;">
          Tilbakestill passordet ditt
        </h1>
        <p style="margin: 0; color: #666; font-size: 15px;">
          Vi har mottatt en forespørsel om å tilbakestille passordet til kontoen din hos Accounted. Klikk på knappen nedenfor for å velge et nytt passord.
        </p>
      </div>

      <div style="margin: 28px 0;">
        <a href="https://app.gnubok.se/auth/callback?token_hash=abc&amp;type=recovery" style="display: inline-block; background: #111; color: #fff; text-decoration: none; padding: 12px 28px; border-radius: 8px; font-size: 14px; font-weight: 500;">
          Tilbakestill passordet
        </a>
      </div>
      <!-- Info -->
      <p style="margin: 0; color: #999; font-size: 13px;">
        Hvis du ikke ba om dette, kan du se bort fra denne meldingen.
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`buildAuthEmail > renders the platform default without a brand 2`] = `
"Tilbakestill passordet ditt

Vi har mottatt en forespørsel om å tilbakestille passordet til kontoen din hos Accounted. Klikk på knappen nedenfor for å velge et nytt passord.

Tilbakestill passordet: https://app.gnubok.se/auth/callback?token_hash=abc&type=recovery

Hvis du ikke ba om dette, kan du se bort fra denne meldingen."
`;
